<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">名导会议室</string>


    <string name="update_service_versionIsAlreadyNew">已经是最新版本了</string>
    <string name="update_service_sureToUpdate">确定更新版本吗</string>
    <string name="update_service_updateLog">更新日志</string>
    <string name="update_service_installNewVersion">安装新版本</string>
    <string name="update_service_laterNotify">稍后提醒</string>
    <string name="update_service_haveNewVersion">版本更新</string>

    <string name="setting_preference_voice">语音</string>

    <string name="no_connection">网络中断，请检查网络连接</string>
    <string name="login_title">会员登录</string>
    <string name="entry_register_activity_password">密码</string>
    <string name="login">登录</string>
    <string name="login_error">登录失败，请重新登录</string>
    <string name="logout_error">退出失败</string>
    <string name="conversation_qunliao">群聊</string>
    <string name="conversation_messages">聊天</string>
    <string name="is_save_pic">是否保存图片？</string>
    <string name="has_save_pic">图片已保存到本地</string>
    <string name="send_picture_fail">发送图片失败</string>
    <string name="conversion_record_error">语音功能不可用</string>
    <string name="conversation_name">群聊名称：</string>
    <string name="conversation_name_nomaohao">群聊名称</string>
    <string name="conversation_detail_invite">邀请好友</string>
    <string name="converstaion_remove_leave">删除并退出</string>
    <string name="conversation_edit_name">请输入群聊名称</string>
    <string name="at_person">选择提醒的人</string>
    <string name="contact">通讯录</string>
    <string name="contact_error">获取通讯录失败</string>
    <string name="send_message">发消息</string>
    <string name="profile_settings">Settings</string>
    <string name="profile_title">我的资料</string>
    <string name="profile_name">姓名：</string>
    <string name="profile_sex">性别：</string>
    <string name="profile_mark">简介：</string>
    <string name="profile_phone">手机：</string>
    <string name="profile_email">邮箱：</string>
    <string name="profile_pwd">修改密码</string>
    <string name="profile_notifySetting">提醒设置</string>
    <string name="profile_version">版本号</string>
    <string name="profile_mark_title">简介</string>
    <string name="profile_phone_title">手机</string>
    <string name="profile_email_title">邮箱</string>
    <string name="upload_avatar_success">上传头像成功</string>
    <string name="upload_avatar_error">上传头像失败</string>
    <string name="profile_resume_mark">请输入简介，最多60个字</string>
    <string name="profile_resume_phone">请输入手机号</string>
    <string name="profile_resume_email">请输入邮箱</string>
    <string name="profile_resume_pwd_original">请输入原密码</string>
    <string name="profile_resume_pwd_new">请输入新密码</string>
    <string name="profile_resume_pwd_new_next">请再输入一次新密码</string>
    <string name="profile_resume_pwd_original_error">原密码输入有误</string>
    <string name="profile_resume_pwd_new_error">新密码两次输入不一致</string>
    <string name="profile_resume_success">修改成功</string>
    <string name="profile_resume_error">修改失败</string>
    <string name="notification_title">通告</string>
    <string name="notification_share">分享到</string>
    <string name="person_detail_title">会员资料</string>
    <string name="me">我</string>
    <string name="logout">退出登录</string>
    <string name="splash_title">名导会议室</string>
    <string name="splash_tip">中国电视剧导演工作委员会\n内部沟通工具</string>
    <string name="common_sure">确定</string>
    <string name="keycodeback_twice">再按一次退出程序</string>

    <string name="login_username_hint">请输入账号</string>
    <string name="password_ischecked">密码可见</string>
    <string name="ensurePasswordHint">请在此输入密码</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="ensurePassword">确认密码 </string>
    <string name="register">注册</string>

    <string name="password_can_not_null">密码不能为空</string>
    <string name="username_cannot_null">用户名不能为空</string>
    <string name="password_not_consistent">输入的两次密码不一致</string>
    <string name="registerSucceed">注册成功</string>
    <string name="registerFailed">注册失败。</string>

    <string name="not_have_account">还没有账号？</string>
    <string name="register_rightnow">立即注册 &gt;</string>
    <string name="notification_metres">米</string>
    <string name="notification_unknown">未知</string>
    <string name="notification_recent_login_time">最近登录时间:</string>
    <string name="contact_account">账号 </string>
    <string name="contact_search">搜索</string>
    <string name="profile_vibrate">震动</string>
    <string name="contact_chat">发起会话</string>
    <string name="contact_add_friend">添加好友</string>
    <string name="contact_new_friends">新朋友</string>
    <string name="contact_deleteFriendRequest">删除好友请求</string>
    <string name="contact_agreed">已同意</string>
    <string name="contact_deleteContact">删除联系人</string>
    <string name="contact_deleteSucceed">删除成功</string>
    <string name="contact_findFriends">查找好友</string>
    <string name="contact_add">添加</string>
    <string name="contact_sendRequestSucceed">发送请求成功，等待对方验证</string>
    <string name="contact_personalInfo">个人资料</string>
    <string name="contact_detailInfo">详细资料</string>
    <string name="contact_male">男</string>
    <string name="contact_female">女</string>
    <string name="profile_notifyWhenNews">接收新消息通知</string>
    <string name="profile_fragment_checkUpdate">检查更新</string>
    <string name="conversation_group">群组</string>
    <string name="conversation_create">创建</string>
    <string name="conversation_Members">群组成员</string>
    <string name="conversation_inviteSucceed">已发出邀请</string>
    <string name="conversation_inviteMembers">邀请群成员</string>
    <string name="conversation_kickTips">确认要踢走该成员吗？</string>
    <string name="conversation_quitGroup">退群</string>
    <string name="conversation_quit_group_tip">确定要退出该群组？</string>
    
    <string name="utils_kilometres">公里</string>
    <string name="notification_fragment_sort">排序</string>
    <string name="notification_fragment_loginTime">登录时间</string>
    <string name="notification_fragment_distance">距离</string>
    <string name="contact_alreadyCreateAddRequest">请求已发送</string>
    <string name="conversation_alreadyQuitConv">已退出群</string>
    <string name="conversation_detail_kickSucceed">已踢走该成员</string>
    <string name="conversation_detail_title">详情</string>

    <string name="chat_location_activity_send">发送</string>
    <string name="chat_getGeoInfoFailed">获取地理位置信息失败!</string>
    <string name="chat_location_mapKeyErrorTips">key 验证出错! 请在 AndroidManifest.xml 文件中检查 key 设置</string>
    <string name="chat_cannotGetYourAddressInfo">无法获取到您的位置信息！</string>

    <string name="push_add_request">您有新的好友申请</string>
    <string name="message_when_agree_request">我们已经是好友了，来聊天吧</string>

    <string name="chat_base_list_view_listEmptyHint">无数据</string>
    <string name="chat_utils_tips">提示</string>
    <string name="chat_utils_please_choose">请选择</string>
    <string name="chat_utils_share">分享</string>
    <string name="chat_utils_right">好的</string>
    <string name="chat_utils_hardLoading">努力加载中...</string>
    <string name="chat_common_cancel">取消</string>
    <string name="chat_common_emptyStr" />
    <string name="chat_position">位置</string>
    <string name="chat_common_avatar">头像</string>
    <string name="chat_common_username">用户名</string>
    <string name="chat_common_nickname">昵称</string>
    <string name="chat_common_please_input_hint">请输入{0}</string>
    <string name="chat_common_change_title">{0}</string>
    <string name="chat_newMessage">新的消息</string>
    <string name="chat_cannotFindResult">抱歉，未能找到结果</string>
    <string name="chat_pleaseCheckNetwork">请检查网络</string>
    <string name="load_more_footer_hint_normal">查看更多</string>
    <string name="login_null_name_tip">请输入用户名</string>

    <string name="chat_geoIsSame">获取坐标相同</string>
    <string name="chat_reverseGeoCodeResultIs">反编码得到的地址：</string>

    <string name="chat_bottom_redpacket">红包</string>
    <string name="money_msg_take_money">你领取了自己的红包</string>
    <string name="money_msg_take_someone_money">你领取了%1$s的红包</string>
    <string name="money_msg_someone_take_money">%1$s领取了你的红包</string>
    <string name="money_msg_someone_take_money_same">%1$s领取了%2$s的红包</string>
    <string name="leancloud_luckymoney">LeanCloud红包</string>
    <string name="exclusive_red_envelope">专属红包</string>
    <string name="chat_bottom_transfer">转账</string>
    <string name="transfer_msg_sent">对方已收到转账</string>
    <string name="transfer_msg_received">已收到对方转账</string>
</resources>