<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <include layout="@layout/common_header_layout"
        android:id="@+id/title_layout"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp46"
        android:layout_marginBottom="@dimen/dp10"
        android:src="@drawable/logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_title"
        android:gravity="center"
        android:textSize="@dimen/sp24"
        android:textColor="@android:color/black"
        android:layout_marginBottom="@dimen/dp11"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_tip"
        android:gravity="center"
        android:textSize="@dimen/sp12"
        android:textColor="@android:color/black"
        android:layout_marginBottom="@dimen/dp11"/>

    <EditText
        android:id="@+id/activity_login_et_username"
        android:singleLine="true"
        android:maxLength="30"
        android:gravity="center"
        android:background="@null"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp17"
        android:paddingBottom="@dimen/dp15"
        android:paddingTop="@dimen/dp15"
        android:textSize="@dimen/sp18"
        android:textColor="@color/high_text"
        android:hint="@string/login_username_hint"
        android:textColorHint="@color/light_text"/>

    <View style="@style/LCIMDividerLine.Horizontal"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/activity_login_et_password"
            android:singleLine="true"
            android:maxLength="15"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:gravity="center"
            android:background="@null"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dp15"
            android:paddingTop="@dimen/dp15"
            android:textSize="@dimen/sp18"
            android:hint="@string/login_password_hint"
            android:textColor="@color/high_text"
            android:textColorHint="@color/light_text"/>

        <!--<TextView
            android:id="@+id/login_password_ischecked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp6"
            android:textColor="@color/light_text"
            android:text="@string/password_ischecked"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp25"/>-->
    </RelativeLayout>

    <View style="@style/LCIMDividerLine.Horizontal"/>

    <Button
        android:id="@+id/activity_login_btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp46"
        android:background="@drawable/common_btn"
        android:gravity="center"
        android:text="@string/login"
        android:paddingTop="@dimen/dp10"
        android:paddingBottom="@dimen/dp10"
        android:paddingLeft="@dimen/dp69"
        android:paddingRight="@dimen/dp69"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp18"/>
</LinearLayout>
