<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/common_header_layout"
        android:id="@+id/title_layout"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp16"
        android:textColor="@color/high_text"
        android:layout_marginTop="@dimen/dp17"
        android:layout_marginLeft="@dimen/dp17"
        android:text="@string/profile_resume_pwd_original"/>

    <EditText
        android:id="@+id/pwd_origin_edittext"
        android:paddingLeft="@dimen/dp8"
        android:paddingRight="@dimen/dp8"
        android:singleLine="true"
        android:maxLength="15"
        android:inputType="textPassword"
        android:background="@drawable/lcim_textview_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp17"
        android:paddingBottom="@dimen/dp15"
        android:paddingTop="@dimen/dp15"
        android:textSize="@dimen/sp16"
        android:textColor="@color/high_text"
        android:hint="@string/profile_resume_pwd_original"
        android:textColorHint="@color/light_text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp16"
        android:textColor="@color/high_text"
        android:layout_marginTop="@dimen/dp17"
        android:layout_marginLeft="@dimen/dp17"
        android:text="@string/profile_resume_pwd_new"/>

    <EditText
        android:id="@+id/pwd_new_edittext"
        android:paddingLeft="@dimen/dp8"
        android:paddingRight="@dimen/dp8"
        android:singleLine="true"
        android:maxLength="15"
        android:inputType="textPassword"
        android:background="@drawable/lcim_textview_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp17"
        android:paddingBottom="@dimen/dp15"
        android:paddingTop="@dimen/dp15"
        android:textSize="@dimen/sp16"
        android:textColor="@color/high_text"
        android:hint="@string/profile_resume_pwd_new"
        android:textColorHint="@color/light_text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp16"
        android:textColor="@color/high_text"
        android:layout_marginLeft="@dimen/dp17"
        android:text="@string/profile_resume_pwd_new_next"/>

    <EditText
        android:id="@+id/pwd_new_next_edittext"
        android:paddingLeft="@dimen/dp8"
        android:paddingRight="@dimen/dp8"
        android:singleLine="true"
        android:maxLength="15"
        android:inputType="textPassword"
        android:background="@drawable/lcim_textview_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp17"
        android:paddingBottom="@dimen/dp15"
        android:paddingTop="@dimen/dp15"
        android:textSize="@dimen/sp16"
        android:textColor="@color/high_text"
        android:hint="@string/profile_resume_pwd_new_next"
        android:textColorHint="@color/light_text"/>

</LinearLayout>