<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/common_header_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/activity_top_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="vertical"
                android:paddingBottom="20dp">
                <View style="@style/LCIMDividerLine.Horizontal"/>

                <LinearLayout
                    android:id="@+id/profile_avatar_layout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/setting_item_height"
                    android:background="@drawable/btn_selector"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:paddingLeft="@dimen/common_horizontal_margin"
                    android:paddingRight="@dimen/common_horizontal_margin">
                    <com.im.chat.view.RoundImageView
                        android:id="@+id/profile_avatar_view"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:scaleType="fitXY"
                        android:src="@drawable/contact_new_friends_icon" />
                </LinearLayout>

                <View style="@style/LCIMDividerLine.Horizontal"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="vertical"
                android:paddingBottom="20dp">
                <View style="@style/LCIMDividerLine.Horizontal"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_height="@dimen/setting_item_height"
                    android:text="姓名"
                    android:background="@drawable/btn_selector"
                    android:paddingLeft="@dimen/common_horizontal_margin"
                    android:paddingRight="@dimen/common_horizontal_margin"/>
                    <TextView
                        android:id="@+id/profile_name"
                        android:layout_width="match_parent"
                        android:gravity="center_vertical"
                        android:layout_height="@dimen/setting_item_height"
                        android:text="肖长剑"
                        android:background="@drawable/btn_selector"
                        android:paddingRight="@dimen/common_horizontal_margin"/>
                </LinearLayout>

                <View style="@style/LCIMDividerLine.Horizontal"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_height="@dimen/setting_item_height"
                        android:text="性别"
                        android:background="@drawable/btn_selector"
                        android:paddingLeft="@dimen/common_horizontal_margin"
                        android:paddingRight="@dimen/common_horizontal_margin"/>
                    <TextView
                        android:id="@+id/profile_sex"
                        android:layout_width="match_parent"
                        android:gravity="center_vertical"
                        android:layout_height="@dimen/setting_item_height"
                        android:text="男"
                        android:background="@drawable/btn_selector"
                        android:paddingRight="@dimen/common_horizontal_margin"/>
                </LinearLayout>
                <View style="@style/LCIMDividerLine.Horizontal"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_height="@dimen/setting_item_height"
                        android:text="简介"
                        android:background="@drawable/btn_selector"
                        android:paddingLeft="@dimen/common_horizontal_margin"
                        android:paddingRight="@dimen/common_horizontal_margin"/>
                    <TextView
                        android:id="@+id/profile_introduce"
                        android:layout_width="match_parent"
                        android:gravity="center_vertical"
                        android:layout_height="@dimen/setting_item_height"
                        android:text="我是一只来自北方的雄狮,匍匐在中国人民的怀抱。"
                        android:background="@drawable/btn_selector"
                        android:paddingRight="@dimen/common_horizontal_margin"
                        android:drawableRight="@drawable/common_view_right_arrow_pic"/>
                </LinearLayout>
                <View style="@style/LCIMDividerLine.Horizontal"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_height="@dimen/setting_item_height"
                        android:text="手机号"
                        android:background="@drawable/btn_selector"
                        android:paddingLeft="@dimen/common_horizontal_margin"
                        android:paddingRight="@dimen/common_horizontal_margin"/>
                    <TextView
                        android:id="@+id/profile_phone"
                        android:layout_width="match_parent"
                        android:gravity="center_vertical"
                        android:layout_height="@dimen/setting_item_height"
                        android:text="12390807564"
                        android:background="@drawable/btn_selector"
                        android:paddingRight="@dimen/common_horizontal_margin"
                        android:drawableRight="@drawable/common_view_right_arrow_pic"/>
                </LinearLayout>
                <View style="@style/LCIMDividerLine.Horizontal"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_height="@dimen/setting_item_height"
                        android:text="邮箱"
                        android:background="@drawable/btn_selector"
                        android:paddingLeft="@dimen/common_horizontal_margin"
                        android:paddingRight="@dimen/common_horizontal_margin"/>
                    <TextView
                        android:id="@+id/profile_email"
                        android:layout_width="match_parent"
                        android:gravity="center_vertical"
                        android:layout_height="@dimen/setting_item_height"
                        android:text="12@qq.com"
                        android:background="@drawable/btn_selector"
                        android:paddingRight="@dimen/common_horizontal_margin"
                        android:drawableRight="@drawable/common_view_right_arrow_pic"/>
                </LinearLayout>
                <View style="@style/LCIMDividerLine.Horizontal"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:gravity="center_vertical"
                        android:layout_height="@dimen/setting_item_height"
                        android:text="修改密码"
                        android:background="@drawable/btn_selector"
                        android:paddingLeft="@dimen/common_horizontal_margin"
                        android:paddingRight="@dimen/common_horizontal_margin"
                        android:drawableRight="@drawable/common_view_right_arrow_pic"/>
                </LinearLayout>
                <View style="@style/LCIMDividerLine.Horizontal"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="vertical"
                android:paddingBottom="20dp">
                <View style="@style/LCIMDividerLine.Horizontal"/>

                <TextView
                    android:id="@+id/profile_notifysetting_view"
                    android:layout_width="match_parent"
                    android:gravity="center_vertical"
                    android:layout_height="@dimen/setting_item_height"
                    android:text="@string/profile_notifySetting"
                    android:background="@drawable/btn_selector"
                    android:paddingLeft="@dimen/common_horizontal_margin"
                    android:paddingRight="@dimen/common_horizontal_margin"
                    android:drawableRight="@drawable/common_view_right_arrow_pic"/>

                <View style="@style/LCIMDividerLine.Horizontal"/>

                <TextView
                    android:id="@+id/profile_checkupdate_view"
                    android:layout_width="match_parent"
                    android:gravity="center_vertical"
                    android:layout_height="@dimen/setting_item_height"
                    android:text="@string/profile_fragment_checkUpdate"
                    android:background="@drawable/btn_selector"
                    android:paddingLeft="@dimen/common_horizontal_margin"
                    android:paddingRight="@dimen/common_horizontal_margin"
                    android:drawableRight="@drawable/common_view_right_arrow_pic"/>

                <View style="@style/LCIMDividerLine.Horizontal"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="vertical">
                <View style="@style/LCIMDividerLine.Horizontal"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@drawable/btn_selector">
                    <TextView
                        android:id="@+id/profile_version_view"
                        android:layout_width="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_height="@dimen/setting_item_height"
                        android:text="@string/profile_version"
                        android:paddingLeft="@dimen/common_horizontal_margin" />
                    <TextView
                        android:id="@+id/profile_version"
                        android:layout_width="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_height="@dimen/setting_item_height"
                        android:text="6.72"
                        android:paddingRight="@dimen/common_horizontal_margin"
                        android:layout_alignParentRight="true"/>
                </RelativeLayout>

                <View style="@style/LCIMDividerLine.Horizontal"/>
            </LinearLayout>

            <TextView
                android:id="@+id/profile_logout_btn"
                style="@style/My.Button.logout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/activity_top_margin"
                android:layout_marginLeft="@dimen/common_horizontal_margin"
                android:layout_marginRight="@dimen/common_horizontal_margin"
                android:gravity="center"
                android:text="退出登录" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>